# secret-share

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-run.sh  dockerfile
.github/workflows/: build-and-release.yml  rust.yml
client/: package-lock.json  package.json
client/public/: config.js  index.html  manifest.json
client/src/: App.js
client/src/components/: Features.jsx  Header.jsx  LinkButton.jsx  LogoHeading.jsx  SaveSecret.js  Step.jsx  StepForm.jsx  ViewSecret.js
client/src/lib/: client.js  client.test.js  cryptography.js  cryptography.test.js  inputUtils.js
client/src/routes/: Home.jsx  Save.jsx  View.jsx
client/src/style/: formRoutes.css  home.css  logoHeading.css  view.css
server/: .gitignore  Cargo.toml
server/.cargo/: config.toml
server/src/: index.rs  main.rs  props.rs
server/src/api/: mod.rs  models.rs  routes.rs
server/src/api/middleware/captcha/: mod.rs  validation.rs  web.rs
server/src/storage/: encryption.rs  key.rs  mod.rs  models.rs
server/src/storage/adapters/: google_cloud_storage.rs  in_memory.rs  mod.rs
server/src/storage/cipher/: mod.rs
src/: main.rs
src/api/: mod.rs  models.rs  routes.rs
src/storage/: mod.rs
src/storage/adapters/: in_memory.rs  mod.rs
