[package]
name = "secret-share"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
actix-server = "2.1"
awc = { version = "3.0.0", features = ["rustls"] }
rustls = "0.20"
rand_core = { version = "0.6", features = ["std"] }
serde = "1"
serde_json = "1"
serde_bytes = "0.11.5"
base64 = "0.13.0"
lazy_static = "1.4.0"
cloud-storage = { version = "0.10", features = ["global-client", "sync"] }
aes = "0.7.5"
block-modes = "0.8.1"
chrono = "0.4.19"
async-trait = "0.1.53"